@@ -2031,6 +2031,89 @@ name|MERGE
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|dropAll
+specifier|public
+specifier|synchronized
+name|void
+name|dropAll
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Iterator
+argument_list|<
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|SegmentCacheKey
+argument_list|,
+name|SegmentReader
+argument_list|>
+argument_list|>
+name|iter
+init|=
+name|readerMap
+operator|.
+name|entrySet
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+specifier|final
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|SegmentCacheKey
+argument_list|,
+name|SegmentReader
+argument_list|>
+name|ent
+init|=
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|SegmentReader
+name|sr
+init|=
+name|ent
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+name|sr
+operator|.
+name|hasChanges
+operator|=
+literal|false
+expr_stmt|;
+name|iter
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
+comment|// NOTE: it is allowed that this decRef does not
+comment|// actually close the SR; this can happen when a
+comment|// near real-time reader using this SR is still open
+name|sr
+operator|.
+name|decRef
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 DECL|method|drop
 specifier|public
 specifier|synchronized
@@ -6192,10 +6275,8 @@ expr_stmt|;
 comment|// Don't bother saving any changes in our segmentInfos
 name|readerPool
 operator|.
-name|clear
-argument_list|(
-literal|null
-argument_list|)
+name|dropAll
+argument_list|()
 expr_stmt|;
 comment|// Mark that the index has changed
 operator|++
