@@ -12248,6 +12248,146 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testDeleteAllNRTLeftoverFiles
+specifier|public
+name|void
+name|testDeleteAllNRTLeftoverFiles
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|d
+init|=
+operator|new
+name|MockDirectoryWrapper
+argument_list|(
+name|random
+argument_list|,
+operator|new
+name|RAMDirectory
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|d
+argument_list|,
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|20
+condition|;
+name|i
+operator|++
+control|)
+block|{
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+literal|100
+condition|;
+operator|++
+name|j
+control|)
+block|{
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+block|}
+name|w
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|w
+argument_list|,
+literal|true
+argument_list|)
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|deleteAll
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+comment|// Make sure we accumulate no files except for empty
+comment|// segments_N and segments.gen:
+name|assertTrue
+argument_list|(
+name|d
+operator|.
+name|listAll
+argument_list|()
+operator|.
+name|length
+operator|<=
+literal|2
+argument_list|)
+expr_stmt|;
+block|}
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|d
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
